--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('https://images.unsplash.com/photo-1606787366850-de6330128bfc?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80') center/cover no-repeat;
+            background: url('Screenshot 2025-06-17 150316.png') center/cover no-repeat;
             z-index: -1;
             opacity: 0.9;
         }
